set up firebase on the back end and enabled google authentication, set up google id key and secret key on virtual environment file

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 # Authentication
-GOOGLE_ID=key_goes_here
-GOOGLE_SECRET=key_goes_here
+GOOGLE_ID=66760696848-iphqu3lebt0rjvhuo26uvoojfrjf5mpb.apps.googleusercontent.com
+GOOGLE_SECRET=un5XNVxWazWBLx0DWNE4Zwb2
 NEXTAUTH_URL=http://localhost:3000
 
 # Stripe
