--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.1",
     "@reduxjs/toolkit": "1.5.0",
+    "@stripe/stripe-js": "^1.16.0",
     "@tailwindcss/line-clamp": "^0.2.0",
     "firebase": "^8.7.1",
     "firebase-admin": "^9.8.0",
@@ -18,7 +19,8 @@
     "react-currency-formatter": "^1.1.0",
     "react-dom": "17.0.1",
     "react-redux": "7.2.2",
-    "react-responsive-carousel": "^3.2.19"
+    "react-responsive-carousel": "^3.2.19",
+    "stripe": "^8.161.0"
   },
   "license": "MIT",
   "devDependencies": {
