--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^8.7.1",
     "firebase-admin": "^9.11.0",
     "micro": "^9.3.4",
+    "moment": "^2.29.1",
     "next": "latest",
     "next-auth": "^3.27.3",
     "react": "17.0.1",
